infra/vpc/vpc.tf
// ========================================
// VPC Setup
// ========================================

resource "aws_vpc" "cv_c9_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.project}-vpc"
  }
}
